--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-markdown": "^4.0.3",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
+    "react-select": "^2.1.2",
     "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
     "validatorjs": "^3.14.2"
