--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.18.0",
     "connected-react-router": "^5.0.1",
+    "detect-browser-language": "^0.0.1",
     "express": "^4.16.4",
     "history": "^4.7.2",
+    "i18next": "^12.1.0",
     "next": "^7.0.2",
     "next-redux-wrapper": "^2.0.0",
     "node-sass": "^4.9.4",
@@ -25,6 +27,7 @@
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.5.2",
+    "react-i18next": "^8.3.8",
     "react-markdown": "^4.0.3",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
