--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "react-router": "^4.3.1",
     "react-select": "^2.1.2",
     "react-transition-group": "^2.5.0",
-    "redux": "^4.0.1",
-    "validatorjs": "^3.14.2"
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
