--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.5.2",
     "react-i18next": "^8.3.8",
+    "react-infinite-scroller": "^1.2.2",
     "react-markdown": "^4.0.3",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
