--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-select": "^2.1.2",
+    "react-spinners": "^0.4.7",
     "react-transition-group": "^2.5.0",
     "redux": "^4.0.1"
   },
