--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next",
     "build": "next build",
-    "start": "next start -p 8000",
+    "start": "next start",
     "prettier-watch": "onchange '**/*.js' -- prettier --write {{changed}}"
   },
   "keywords": [],
@@ -24,7 +24,7 @@
     "express": "^4.16.4",
     "history": "^4.7.2",
     "i18next": "^12.1.0",
-    "next": "^7.0.2",
+    "next": "latest",
     "next-eslint": "^0.0.4",
     "next-redux-wrapper": "^2.0.0",
     "node-sass": "^4.9.4",
