Finish MVP of project

--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "hello-next",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "prettier-watch": "onchange '**/*.js' -- prettier --write {{changed}}"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
