--- a/now.json
+++ b/now.json
@@ -2,5 +2,8 @@
   "version": 2,
   "builds": [
     { "src": "package.json", "use": "@now/next", "config": { "maxLambdaSize": "50mb" } }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
