--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "express": "^4.16.4",
     "history": "^4.7.2",
     "i18next": "^12.1.0",
+    "lodash": "^4.17.11",
     "next": "latest",
     "next-eslint": "^0.0.4",
     "next-redux-wrapper": "^2.0.0",
     "node-sass": "^4.9.4",
     "prettier": "^1.15.3",
+    "query-string": "^6.2.0",
     "react": "^16.5.2",
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
